--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/ClientApp/src/app/app.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/ClientApp/src/app/app.component.html
@@ -3,7 +3,7 @@
     <bs-navbar-toggler [state]="state" [toggleOnClick]="false"></bs-navbar-toggler>
   </ng-template>
   <bs-navbar-brand [routerLink]='["/"]'>
-    <span class="brand d-block px-3 pb-3 pt-3">
+    <span class="brand d-block p-1">
       Application
     </span>
   </bs-navbar-brand>
