--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/app.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/app.component.html
@@ -11,12 +11,22 @@
     <bs-navbar-item>
       <a [routerLink]='[]'>Account</a>
       <bs-navbar-dropdown>
-        <bs-navbar-item>
-          <a [routerLink]='["/account", "login"]'>Login</a>
-        </bs-navbar-item>
-        <bs-navbar-item>
-          <a [routerLink]='["/account", "register"]'>Register</a>
-        </bs-navbar-item>
+        <ng-container *ngIf="(user$ | async) === null">
+          <bs-navbar-item>
+            <a [routerLink]='["/account", "login"]'>Login</a>
+          </bs-navbar-item>
+          <bs-navbar-item>
+            <a [routerLink]='["/account", "register"]'>Register</a>
+          </bs-navbar-item>
+        </ng-container>
+        <ng-container *ngIf="(user$ | async) !== null">
+          <bs-navbar-item>
+            <a [routerLink]='["/account", "profile"]'>Profile</a>
+          </bs-navbar-item>
+          <bs-navbar-item>
+            <a [routerLink]='[]' (click)="onLogout()">Logout</a>
+          </bs-navbar-item>
+        </ng-container>
       </bs-navbar-dropdown>
     </bs-navbar-item>
   </bs-navbar-nav>
