--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/login/login.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<body>
+  <form class="container" (submit)="login()">
+    <div class="row mb-3" *ngIf="(errorMessages$ | async) as errorMessages">
+      <div class="col-md-12">
+        <bs-alert *ngFor="let errorMessage of errorMessages" [type]="errorMessage.color" (afterOpenedOrClosed)="removeErrorMessage(errorMessage, $event)">
+          {{ errorMessage.message }}
+          <bs-alert-close></bs-alert-close>
+        </bs-alert>
+      </div>
+    </div>
+    <div class="row mb-3">
+      <div class="col-md-3">
+        <label class="col-form-label" [bsFor]="txtemail">Email</label>
+      </div>
+      <div class="col-md-9">
+        <input type="email" [(ngModel)]="email" name="email" #txtemail autocomplete="username" class="form-control" />
+      </div>
+    </div>
+    <div class="row mb-3">
+      <div class="col-md-3">
+        <label class="col-form-label" [bsFor]="txtpassword">Password</label>
+      </div>
+      <div class="col-md-9">
+        <input type="password" [(ngModel)]="password" name="password" #txtpassword autocomplete="current-password" class="form-control" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <button type="submit" class="btn btn-primary">Login</button>
+      </div>
+    </div>
+  </form>
+</body>
