--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
@@ -28,8 +28,41 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <button type="submit" class="btn btn-primary">Login</button>
+                <span class="btn-group">
+                    <button type="submit" class="btn btn-primary">Login</button>
+                    <button class="btn btn-secondary" (click)="OnLostDevice()">Lost device?</button>
+                </span>
             </div>
         </div>
     </form>
+    <bs-modal [(isOpen)]="isRequestingRecoveryCode">
+        <form *bsModal cdkTrapFocus (submit)="recoveryCodeEntered()">
+            <div bsModalHeader>
+                <h5 class="modal-title">2FA Recovery</h5>
+            </div>
+            <div bsModalBody class="p-2 d-flex flex-row align-items-center justify-content-between">
+                <div class="container">
+                    <div class="form-group row mb-3">
+                        <div [bsFor]="txtRecoveryCode" class="col-md-12 col-form-label">
+                            Consult the recovery codes you've written down when activating 2-factor authentication. Enter a recovery code in the box below.
+                        </div>
+                    </div>
+                    <div class="form-group row mb-3">
+                        <div class="col-md-12">
+                            <input type="text" [(ngModel)]="twoFactorRecoveryCode" autofocus #txtRecoveryCode name="txtRecoveryCode" class="form-control">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div bsModalFooter>
+                <div class="btn-group">
+                    <button type="submit" class="btn btn-primary" aria-label="Update password">
+                        <i class="fa fa-unlock"></i>
+                        Recover account
+                    </button>
+                    <button type="button" bsModalClose class="btn btn-secondary" aria-label="Cancel">Cancel</button>
+                </div>
+            </div>
+        </form>
+    </bs-modal>
 </body>
