Adding external logins

--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/login/login.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/login/login.component.html
@@ -29,5 +29,14 @@
 				<button type="submit" class="btn btn-primary">Login</button>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<span>
+					<button *ngFor="let externalProvider of (externalProviders$ | async)" [externalLogin]="externalProvider.name" class="btn btn-block btn-default">
+						Login using {{ externalProvider.displayName }}
+					</button>
+				</span>
+			</div>
+		</div>
 	</form>
 </body>
