Corrections on external logins

--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/login/login.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/login/login.component.html
@@ -32,7 +32,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<span>
-					<button *ngFor="let externalProvider of (externalProviders$ | async)" [externalLogin]="externalProvider.name" class="btn btn-block btn-default">
+					<button *ngFor="let externalProvider of (externalProviders$ | async)" [externalLogin]="externalProvider.name" [action]="'connect'" (loginSuccessOrFailed)="externalLoginSuccessOrFailed($event)" class="btn btn-block btn-default">
 						Login using {{ externalProvider.displayName }}
 					</button>
 				</span>
