--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="row mb-3">
             <div class="col-md-12 text-center">
-                <label class="col-form-label" [bsFor]="txtverificationcode">Open your authenticator app and generate a code for WebApplication1 in the box below:</label>
+                <label class="col-form-label" [bsFor]="txtverificationcode">Open your authenticator app and generate a code for MintPlayer.AspNetCore.IdentityServer in the box below:</label>
             </div>
         </div>
         <div class="row mb-3">
