--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/Server/Views/Account/ExternalLoginTwoFactor.cshtml
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/Server/Views/Account/ExternalLoginTwoFactor.cshtml
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="row mb-3">
                     <div class="col-md-12 text-center">
-                        <span>Open the authenticator app on your smartphone and generate a code for WebApplication1:</span>
+                        <span>Open the authenticator app on your smartphone and generate a code for MintPlayer.AspNetCore.IdentityServer:</span>
                     </div>
                 </div>
                 <div class="row mb-3">
