--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row mb-3">
             <div class="col-md-12">
-                <input type="text" [(ngModel)]="verificationCode" name="verificationCode" #txtverificationcode autocomplete="off" class="form-control" />
+                <input type="text" [(ngModel)]="verificationCode" name="verificationCode" #txtverificationcode autofocus autocomplete="off" class="form-control" />
             </div>
         </div>
         <div class="row mb-3">
