--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/Server/Views/Account/AddExternalLoginCallback.cshtml
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/Server/Views/Account/AddExternalLoginCallback.cshtml
@@ -5,7 +5,7 @@
     <title>Processing...</title>
     <script type="text/javascript">
         const message = {
-            status: @Model.Status,
+            status: @( (int)Model.Status ),
             provider: "@Model.Provider",
             error: "@Model.Error",
             errorDescription: "@Model.ErrorDescription"
