--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/app.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/app.component.html
@@ -1,36 +1,36 @@
 <bs-navbar #nav>
-  <ng-template bsExpandButton let-state>
-    <bs-navbar-toggler [state]="state" [toggleOnClick]="false"></bs-navbar-toggler>
-  </ng-template>
-  <bs-navbar-brand [routerLink]='["/"]'>
-    <span class="brand d-block p-1">
-      Identity provider
-    </span>
-  </bs-navbar-brand>
-  <bs-navbar-nav [collapse]="true">
-    <bs-navbar-item>
-      <a [routerLink]='[]'>Account</a>
-      <bs-navbar-dropdown>
-        <ng-container *ngIf="(user$ | async) === null">
-          <bs-navbar-item>
-            <a [routerLink]='["/account", "login"]'>Login</a>
-          </bs-navbar-item>
-          <bs-navbar-item>
-            <a [routerLink]='["/account", "register"]'>Register</a>
-          </bs-navbar-item>
-        </ng-container>
-        <ng-container *ngIf="(user$ | async) !== null">
-          <bs-navbar-item>
-            <a [routerLink]='["/account", "profile"]'>Profile</a>
-          </bs-navbar-item>
-          <bs-navbar-item>
-            <a [routerLink]='[]' (click)="onLogout()">Logout</a>
-          </bs-navbar-item>
-        </ng-container>
-      </bs-navbar-dropdown>
-    </bs-navbar-item>
-  </bs-navbar-nav>
+	<ng-template bsExpandButton let-state>
+		<bs-navbar-toggler [state]="state" [toggleOnClick]="false"></bs-navbar-toggler>
+	</ng-template>
+	<bs-navbar-brand [routerLink]='["/"]'>
+		<span class="brand d-block p-1">
+			MintPlayer.AspNetCore.IdentityServer
+		</span>
+	</bs-navbar-brand>
+	<bs-navbar-nav [collapse]="true">
+		<bs-navbar-item>
+			<a [routerLink]='[]'>Account</a>
+			<bs-navbar-dropdown>
+				<ng-container *ngIf="(user$ | async) === null">
+					<bs-navbar-item>
+						<a [routerLink]='["/account", "login"]'>Login</a>
+					</bs-navbar-item>
+					<bs-navbar-item>
+						<a [routerLink]='["/account", "register"]'>Register</a>
+					</bs-navbar-item>
+				</ng-container>
+				<ng-container *ngIf="(user$ | async) !== null">
+					<bs-navbar-item>
+						<a [routerLink]='["/account", "profile"]'>Profile</a>
+					</bs-navbar-item>
+					<bs-navbar-item>
+						<a [routerLink]='[]' (click)="onLogout()">Logout</a>
+					</bs-navbar-item>
+				</ng-container>
+			</bs-navbar-dropdown>
+		</bs-navbar-item>
+	</bs-navbar-nav>
 </bs-navbar>
 <div [navbarContent]="nav" style="padding-top:10px">
-  <router-outlet></router-outlet>
+	<router-outlet></router-outlet>
 </div>
