--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/profile/profile.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/src/app/pages/account/profile/profile.component.html
@@ -110,7 +110,7 @@
 		</bs-card>
 	</div>
 	<div class="d-block mb-3">
-		<bs-card>
+		<bs-card *ngIf="(user$ | async) as user">
 			<bs-card-header>
 				<i class="fa fa-comments"></i>
 				Social logins
