--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/ClientApp/src/app/pages/information/weatherforecasts/weatherforecasts.component.html
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/ClientApp/src/app/pages/information/weatherforecasts/weatherforecasts.component.html
@@ -1,1 +1,22 @@
-<p>weatherforecasts works!</p>
+<div class="container">
+	<div class="table table-responsive">
+		<table class="table table-striped table-hover">
+			<thead>
+				<tr>
+					<td>Date</td>
+					<td>Temp (&deg;C)</td>
+					<td>Temp (&deg;F)</td>
+					<td>Summary</td>
+				</tr>
+			</thead>
+			<tbody>
+				<tr *ngFor="let weatherForecast of (weatherForecasts$ | async)">
+					<td>{{ weatherForecast.date | date:'dd/MM/yyyy' }}</td>
+					<td>{{ weatherForecast.temperatureC }}</td>
+					<td>{{ weatherForecast.temperatureF }}</td>
+					<td>{{ weatherForecast.summary }}</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
