Exclude data_from_server

--- a/src/content/Application/Web/ClientApp/src/app/pages/home/home.component.html
+++ b/src/content/Application/Web/ClientApp/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
 <p>home works!</p>
+<!--#if (UsePwa && UseServerSideRendering) -->
+<p>
+	You are using both a PWA and Server-side rendering.
+	To view the server-side rendered HTML from <b>View source</b> correctly,
+	refresh the page with <kbd>ctrl</kbd> + <kbd>F5</kbd>.
+	This is how search engines will fetch your webpage.
+</p>
+<!--#endif -->
