Fixed template (bootstrap refs)

--- a/src/content/Application/Web/ClientApp/src/app/app.component.html
+++ b/src/content/Application/Web/ClientApp/src/app/app.component.html
@@ -42,6 +42,6 @@
 		</bs-navbar-item>
 	</bs-navbar-nav>
 </bs-navbar>
-<div [navbarContent]="nav" style="padding-top:10px">
+<div [bsNavbarContent]="nav" style="padding-top:10px">
 	<router-outlet></router-outlet>
 </div>
