--- a/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/src/app/app.component.html
+++ b/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/src/app/app.component.html
@@ -17,6 +17,6 @@
 		</bs-navbar-item>
 	</bs-navbar-nav>
 </bs-navbar>
-<div [navbarContent]="nav" class="container" style="padding-top:10px">
+<div [bsNavbarContent]="nav" class="container" style="padding-top:10px">
 	<router-outlet></router-outlet>
 </div>
