Corrected main.server.ts

--- a/src/content/Application/Web/ClientApp/src/app/app.component.html
+++ b/src/content/Application/Web/ClientApp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<bs-navbar #nav>
+<bs-navbar [color]="colors.dark" #nav>
 	<bs-navbar-toggler *bsExpandButton="let state" [state]="state" [toggleOnClick]="false"></bs-navbar-toggler>
 	<bs-navbar-brand [routerLink]='["/"]'>
 		<span class="brand d-block p-1">
